--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ h2{ font-size: 1.5em;
     align-items: center;
 }
 .hero-image{
-    background-image: url(./00.Website/assets/_images/marieant.jpg);
+    background-image: url(/00.Website/assets/_images/marieant.jpg);
 }
 .post-abs{
     position: absolute;
@@ -93,10 +93,10 @@ h2{ font-size: 1.5em;
     transition: background-color 0.3s, color 0.3s
 }
 .hero-image_sp1{
-    background-image: url(./00.Website/assets/_images/Deloitte.jpg);
+    background-image: url(/00.Website/assets/_images/Deloitte.jpg);
 }
 .hero-image_sp2{
-    background-image: url(./00.Website/assets/_images/vader.jpg);
+    background-image: url(/00.Website/assets/_images/vader.jpg);
 }
 .post-abs_more:hover {
     background-color: white;
